[package]
name = "quic-parser"
license = "MIT"
version = "0.1.5"
edition = "2024"
rust-version = "1.93"
categories = ["network-programming", "parser-implementations"]
description = "Zero-copy QUIC Initial packet parser with optional payload decryption."
keywords = ["quic", "parser", "network", "initial", "decrypt"]
readme = "README.md"
repository = "https://github.com/canmi21/quic-parser.git"

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
aes = { version = "0.8", optional = true }
aws-lc-rs = { version = "1", features = ["unstable"], optional = true }
ring = { version = "0.17", optional = true }
thiserror = "2"
tracing = { version = "0.1", default-features = false, optional = true }

[features]
default = ["ring"]
ring = ["dep:ring", "dep:aes"]
aws-lc-rs = ["dep:aws-lc-rs", "dep:aes"]
tracing = ["dep:tracing"]
full = ["ring", "tracing"]

[[example]]
name = "parse_header"

[[example]]
name = "decrypt_initial"
required-features = ["ring"]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
type_complexity = "allow"
await_holding_lock = "warn"
dbg_macro = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
verbose_file_reads = "warn"